
2016-09-18  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* atlocal.in, atlocal_win: added UNIFY_LISTING
	* testsuite.src/listings.at: moved simplified sed commands used to a single
	  script listings-sed.sh and use this via UNIFY_LISTING
	* testsuite.src/listings.at: split symbols test, added test for -tlines,
	  use -tlines=0 to remove unforced page breaks
	* atlocal_win: added missing COB_HAS_UTC_OFFSET

2016-10-16  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: changed hardcoded listing version to a
	  template

2016-10-11  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: added Symbols test with OCCURS

2016-09-18  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* testsuite.src/syn_file.at: added tests for variable record size,
	  depending on item and and key fields

2016-09-16  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* atlocal.in, atlocal_win : fix unset of environment variables
	  that are used in libcob for runtime configuration; bug #319

2016-08-28  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* Makefile.am: checking `diff` on start of target "check" and
	  `perl` before running target "test" in cobol85

2016-08-02  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at - Added tests for non-existant file and
	  copybook messages in the listing file.

2016-07-24  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at - Fixed test for 32/64 bit pointers and 
	  additional picture information.

2016-07-18  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at - Added SCREEN and LINKAGE section tests.

2016-07-17  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/run_misc.at: Added tests for C calling COBOL
	  with and without setting cob_call_params.
	  Added tests for ENTRY lookup within main module.

2016-07-17  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/run_extensions.at: Moved stdout stderr fprintf test
	  in CBL_OC_HOSTED to external C subprogram.